Done A very common website feature

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -7,11 +7,30 @@ img {
   height: 100px;
 }
 
+.content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 32px;
+}
 .title {
+  flex: 1;
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
-
+.items{
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+  
+}
+.item{
+  max-width: 200px;
+  text-align: center;
+  flex-wrap: wrap;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
