--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  gap: 20px;
 }
 
 .icon {
@@ -27,14 +31,24 @@ body {
   font-size: 26px;
   font-weight: 700;
   background: lavender;
-  width: 42px;
+  min-width: 42px;
   height: 42px;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 1 1 auto;
+  
 }
-
+.header{
+  display: flex;
+  align-items: center;
+}
+.title{
+  font-weight: bold;
+  font-size: 20px;
+  margin: 0;
+}
 .close-button {
   background: #eee;
   border-radius: 50%;
@@ -48,8 +62,13 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  margin-left: auto;
 }
-
+.text{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
 button {
   cursor: pointer;
   padding: 8px 16px;
